# SuiLight

./: .env.example  ANALYSIS.md  Makefile  README.md  SKILL.md  STREAMLIT_DEPLOY.md  VERCEL_DEPLOY.md  __init__.py  __main__.py  batch_capsules.json  configure_pages.sh  demo_capsule.py  deploy_github_pages.sh  historical_replication_capsules.json  pyproject.toml  railway.json  requirements.txt  vercel.json  vercel_static.json
.github/workflows/: deploy.yml
api/: index.py
data/: agent_configs.db  discussions.db  suilight.db  suilight_test.db  topics.db
docs/: CAPSULE_SYSTEM.md  GITHUB_PAGES_SETUP.md  KNOWLEDGE_SYSTEM_INTEGRATION.md  PLATFORM_DESIGN.md  ROADMAP.md  STRATEGIC_PLAN.md  TASK_QUEUE.md  presentation.html
examples/: create_2026_futures_topic.py  create_cross_domain_topic.py  create_edison_topic.py  create_historical_replication_topics.py  create_newton_topic.py  create_tour_graphene_topic.py  push_historical_replication_capsules.py  run_2026_futures_discussion.py  run_cross_domain_discussion.py  run_edison_discussion.py  run_newton_discussion.py
integrations/: llm_factory.py
integrations/minimax/: client.py
scripts/: generate_batch_capsules.py  push_to_capsulehub.py
src/: __init__.py  coffee.py  coffee_router.py  graph.py  graph_router.py  historical_replication.py  main.py  share.py  share_router.py  storage.py  tasks.py
src/agents/: base.py  presets.py
src/discussions/: __init__.py  agent_config.py  discussion_record.py  discussion_router.py  topic_manager.py
src/knowledge/: capsule.py  discussion.py  extended_templates.py  extended_templates_router.py  generator.py  three_set.py  three_set_router.py
src/storage/: __init__.py  capsule_storage.py
tests/: __init__.py  test_core.py  test_storage.py
ui/: coffee.html  graph.html  index.html  streamlit_app.py
