# SuiLight Knowledge Salon
# 多智能体知识协作平台
# 安装: pip install -e .

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sui-light"
version = "1.0.0"
description = "SuiLight Knowledge Salon - Multi-Agent Knowledge Collaboration Platform"
readme = "SKILL.md"
license = {text = "MIT"}
authors = [
    {name = "Kai Digital Agent", email = "kai@localhost"}
]
keywords = [
    "ai", "agents", "knowledge", "collaboration", 
    "llm", "multi-agent", "discussion"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 核心依赖
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    
    # 多 LLM 支持
    "openai>=1.10.0",
    "groq>=0.5.0",
    "requests>=2.31.0",
    
    # 任务队列
    "redis>=5.0.0",
    "celery>=5.3.0",
    
    # 数据处理
    "python-multipart>=0.0.6",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    
    # 工具
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
suilight = "sui_light.__main__:main"

[project.urls]
Homepage = "https://github.com/wanyview/SuiLight"
Repository = "https://github.com/wanyview/SuiLight"
Issues = "https://github.com/wanyview/SuiLight/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["suilight*"]
exclude = ["*.tests", "*.tests.*", "tests", "tests.*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
